[package]
name = "r6n"
version = "0.0.0"
edition = "2021"
description = "Rusty Randomized Recursive Routing for Restricted-Route Networks. R5N DHT implementation in Rust."
keywords = ["r5n", "dht", "p2p"]
categories = ["network-programming"]
license = "MIT"

[dependencies]
sha2 = "0.10"
ed25519-dalek = "2"
curve25519-dalek = "2"
